--- a/app/templates/resume/proj.html
+++ b/app/templates/resume/proj.html
@@ -1,34 +1,41 @@
-<div class="container mt-4">
+<div class="mt-4 project-section">
+  <h2 class="section-header text-center mb-5">Projects</h2>
   {% for project in projects %}
-  <div class="row mb-4 bg-success rounded shadow-lg project-row">
-    <!-- Project Image and Related Skills -->
-    <div class="col-md-8 position-relative">
-      {% if project.image_filename %}
-      <img
-        src="{{ url_for('static', filename='images/projects/' + project.image_filename) }}"
-        alt="{{ project.name }}"
-        class="img-fluid w-100 rounded-top project-image"
-      />
-      {% else %}
-      <img
-        src="{{ url_for('static', filename='images/defaults/notfound2.png') }}"
-        alt="Default project image"
-        class="img-fluid w-100 rounded-top project-image"
-      />
-      {% endif %}
-      <div class="related-skills">
-        <strong>Built With:</strong>
-        <ul class="list-inline m-0">
-          {% for skill in project.related_skills %}
-          <li class="list-inline-item">{{ skill.name }}</li>
-          {% endfor %}
-        </ul>
+  <div class="project-card mb-5">
+    <div class="row">
+      <!-- Project Image and Related Skills -->
+      <div class="col-md-8 project-image-col">
+        <img
+          src="{{ url_for('static', filename='images/projects/' + (project.image_filename or 'notfound2.png')) }}"
+          alt="{{ project.name }}"
+          class="img-fluid project-image"
+        />
+        <div class="related-skills">
+          <strong>Built With:</strong>
+          <ul class="list-inline">
+            {% for skill in project.related_skills %}
+            <li class="list-inline-item">{{ skill.name }}</li>
+            {% endfor %}
+          </ul>
+        </div>
       </div>
-    </div>
 
-    <!-- Project Synopsis -->
-    <div class="col-md-4 synopsis-column">
-      {% include 'resume/project-synopsis.html' %}
+      <!-- Project Synopsis -->
+      <div class="col-md-4 project-synopsis-col">
+        <div class="project-synopsis">
+          <h5>{{ project.name }}</h5>
+          <h6>{{ project.role or 'N/A' }}</h6>
+          <p>{{ project.description or 'Description not available' }}</p>
+          <div class="project-links">
+            <a href="{{ project.repo_link or '#' }}" class="btn btn-repo"
+              >Repo</a
+            >
+            <a href="{{ project.live_link or '#' }}" class="btn btn-live"
+              >Live</a
+            >
+          </div>
+        </div>
+      </div>
     </div>
   </div>
   {% endfor %}
