--- a/app/templates/resume/exp.html
+++ b/app/templates/resume/exp.html
@@ -1,5 +1,5 @@
 <div class="mt-4 experience-section">
-  <h2 class="section-header text-center mb-5">Professional Experience</h2>
+  <h2 class="section-header text-center mb-5">Experience</h2>
   {% for experience in experiences %}
   <div class="exp-card mb-4">
     <h3 class="exp-header">
