--- a/app/templates/resume/main.html
+++ b/app/templates/resume/main.html
@@ -8,6 +8,7 @@
 {% block content %}
 {% include "default/header.html" %}
 {% include "resume/edu.html" %}
-{% include "resume/proj.html" %}
+{% include "resume/pro.html" %}
 {% include "resume/exp.html" %}
+{% include "resume/skill.html" %}
 {% endblock %}
