--- a/app/templates/resume/main.html
+++ b/app/templates/resume/main.html
@@ -12,3 +12,6 @@
 {% include "resume/exp.html" %}
 {% include "resume/skill.html" %}
 {% endblock %}
+{% block js %}
+<script src="{{ url_for('static', filename='scripts/resume.js', v='1.0') }}"></script>
+{% endblock %}
