--- a/app/templates/projects/_project_toggle_form.html
+++ b/app/templates/projects/_project_toggle_form.html
@@ -3,7 +3,7 @@
   <input type="hidden" name="project_id" value="{{ project_data.project_id }}" />
   {{ project_data.form.hidden_tag() }}
 
-  {% if current_user.has_role('ADMIN') %}
+  {% if current_user.is_authenticated and current_user.has_role('ADMIN') %}
     {% if project_data.form.is_featured.data %}
       <button type="submit" class="btn btn-outline-danger">Remove from Featured</button>
     {% else %}
