--- a/app/templates/skills/_skill_edit_form.html
+++ b/app/templates/skills/_skill_edit_form.html
@@ -24,7 +24,7 @@
       skill_data.form.level.data == 2 else 'Advanced' }}
     </span>
     <input
-      class="form-range"
+      class="form-control-range"
       id="level-{{ skill_data.skill_id }}"
       name="level"
       type="range"
