skill unit tests and form updates

--- a/app/templates/admin/interface.html
+++ b/app/templates/admin/interface.html
@@ -3,7 +3,8 @@
 block title %}Interface{% endblock %} {% block content %}
 
 <h1>Upload CV</h1>
-{{ render_form(form, 'admin_routes.upload_cv', 'Upload') }}
+<!--{{ render_form(form, 'admin_routes.upload_cv', 'Upload') }}-->
+
 
 <div class="container mt-4">
   <!-- Tabs Navigation -->
