the great catousel

--- a/app/templates/about/main.html
+++ b/app/templates/about/main.html
@@ -40,5 +40,43 @@
       <p>{{ _("about_interests") }}</p>
     </div>
   </div>
+
+  <!-- Fourth Row: Pets -->
+  <div
+    id="petCarousel"
+    class="carousel slide carousel-fade"
+    data-bs-ride="carousel"
+  >
+    <div class="carousel-inner">
+      {% for image in featured_pet.images %}
+      <div class="carousel-item {{ 'active' if loop.first }}">
+        <img
+          src="{{ url_for('static', filename='images/pets/' + image.filename) }}"
+          class="d-block catousel-image"
+          alt="{{ image.description }}"
+        />
+        <div class="carousel-caption">
+          <p>{{ image.description }}</p>
+        </div>
+      </div>
+      {% endfor %}
+    </div>
+    <button
+      class="carousel-control-prev"
+      type="button"
+      data-bs-target="#petCarousel"
+      data-bs-slide="prev"
+    >
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    </button>
+    <button
+      class="carousel-control-next"
+      type="button"
+      data-bs-target="#petCarousel"
+      data-bs-slide="next"
+    >
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    </button>
+  </div>
 </div>
 {% endblock %}
