--- a/app/static/styles/about.css
+++ b/app/static/styles/about.css
@@ -24,9 +24,17 @@
 
 .nav-success,
 .nav-link {
-  color: rgba(25, 135, 84, 1)
+  color: rgba(25, 135, 84, 1);
 }
 
 footer {
-  color: rgba(25, 135, 84, 1)
+  color: rgba(25, 135, 84, 1);
+}
+
+.catousel-image {
+  width: 100%;
+  height: auto;
+  max-height: 300px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
 }
