--- a/app/templates/about/main.html
+++ b/app/templates/about/main.html
@@ -4,13 +4,13 @@
   href="{{ url_for('static', filename='styles/about.css') }}"
 />
 {% endblock %} {% block content %}
-<div class="container text-success mt-5">
+<div class="container mt-5">
   <!-- First Row: About Intro and Image -->
   <div class="row">
     <!-- About Intro -->
     <div class="col-lg-6">
-      <h1>About Me</h1>
-      <p>{{ _("about_intro") }}</p>
+      <h1 class="about-heading">About Me</h1>
+      <p class="about-text">{{ _("about_intro") }}</p>
     </div>
 
     <!-- Image -->
@@ -28,16 +28,16 @@
   <!-- Second Row: Goals -->
   <div class="row mt-4">
     <div class="col-lg-12">
-      <h2>Goals</h2>
-      <p>{{ _("about_goals") }}</p>
+      <h2 class="about-heading">Goals</h2>
+      <p class="about-text">{{ _("about_goals") }}</p>
     </div>
   </div>
 
   <!-- Third Row: Interests -->
   <div class="row mt-4">
     <div class="col-lg-12">
-      <h2>Interests</h2>
-      <p>{{ _("about_interests") }}</p>
+      <h2 class="about-heading">Interests</h2>
+      <p class="about-text">{{ _("about_interests") }}</p>
     </div>
   </div>
 
