--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -39,7 +39,7 @@
 
     <div class="container mt-5 pt-5">{% include 'utils/flash.html' %}</div>
 
-    <main class="container about-bg">
+    <main class="container">
       {% block content %}
         {% include 'default/construction.html' %}
       {% endblock %}
