--- a/app/templates/about/main.html
+++ b/app/templates/about/main.html
@@ -5,27 +5,20 @@
 />
 {% endblock %} {% block content %}
 <div class="container mt-5">
-  <!-- First Row: About Intro and Image -->
   <div class="row">
-    <!-- About Intro -->
-    <div class="col-lg-6">
-      <h1 class="about-heading">About Me</h1>
-      <p class="about-text">{{ _("about_intro") }}</p>
-    </div>
-
-    <!-- Image -->
-    <div class="col-lg-6 d-flex justify-content-center">
-      <div class="img-container">
+    <div class="col-lg-12">
+      <div class="img-container float-end me-3">
         <img
           src="{{ _('headshot_location') }}"
           alt="{{ _('name') }}"
           class="img-fluid rounded-circle"
         />
       </div>
+      <h1 class="about-heading">About Me</h1>
+      <p class="about-text">{{ _("about_intro") }}</p>
     </div>
   </div>
 
-  <!-- Second Row: Goals -->
   <div class="row mt-4">
     <div class="col-lg-12">
       <h2 class="about-heading">Goals</h2>
@@ -33,7 +26,6 @@
     </div>
   </div>
 
-  <!-- Third Row: Interests -->
   <div class="row mt-4">
     <div class="col-lg-12">
       <h2 class="about-heading">Interests</h2>
@@ -41,7 +33,6 @@
     </div>
   </div>
 
-  <!-- Fourth Row: Pets -->
   <div
     id="petCarousel"
     class="carousel slide carousel-fade"
