--- a/app/templates/about/main.html
+++ b/app/templates/about/main.html
@@ -14,19 +14,21 @@
           class="img-fluid rounded-circle"
         />
       </div>
-      <h1 class="about-heading">About Me</h1>
-      <p class="about-text">{{ _("about_intro") }}</p>
+      <div class="text-overlay">
+        <h1 class="about-heading">About Me</h1>
+        <p class="about-text">{{ _("about_intro") }}</p>
+      </div>
     </div>
   </div>
 
-  <div class="row mt-4">
+  <div class="row mt-4 text-overlay">
     <div class="col-lg-12">
       <h2 class="about-heading">Goals</h2>
       <p class="about-text">{{ _("about_goals") }}</p>
     </div>
   </div>
 
-  <div class="row mt-4">
+  <div class="row mt-4 text-overlay">
     <div class="col-lg-12">
       <h2 class="about-heading">Interests</h2>
       <p class="about-text">{{ _("about_interests") }}</p>
