--- a/app/templates/resume/pro.html
+++ b/app/templates/resume/pro.html
@@ -15,6 +15,7 @@
 {% endfor %}
 
 <div class="mt-4 project-section">
+  <h2 class="section-header text-center mb-5">Projects</h2>
   <!-- Featured Filter -->
   <div class="project-filters mb-3 text-center">
     <h3 class="filter-category-header">Featured</h3>
