--- a/app/templates/default/nav/links/center.html
+++ b/app/templates/default/nav/links/center.html
@@ -1,5 +1,5 @@
 <!-- Center-aligned links -->
-<div class="navbar-nav mx-auto">
+<div class="navbar-nav">
   <li class="nav-item dropdown">
     <a
       class="nav-link dropdown-toggle"
