--- a/app/templates/default/header.html
+++ b/app/templates/default/header.html
@@ -164,7 +164,7 @@
     <div class="headshot-header">
       <h3 class="text-center mb-3">Headshot</h3>
     </div>
-    <div class="professional-headshot">
+    <div class="professional-headshot d-flex justify-content-center">
       <img
         src="{{ _('headshot_location') }}"
         alt="Professional Headshot"
